# react-users-tasks-api

./: .env  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 4870c49cff04_criando_bd_atividades.py  5158b9c66a1a_primeiro_upload.py  6b70dc44c809_atualizando_bd.py  8eada661fd80_adicionando_user_2.py  b0fd21deae11_adicionando_user_3.py  b1a7264c156f_criando_bd.py  b3e3c265da73_adicionando_user.py  c4afae05824d_primeiro_upload.py  c8fb756c948a_alterando_data.py  cb43bbffcb02_alterando_tipo_data.py  f301d3d648c2_adicionando_usuario.py
tbr_api/: dependencies.py  server.py
tbr_api/crud/: atividade_crud.py  user_crud.py
tbr_api/infra/config/: base.py  database.py
tbr_api/infra/models/: atividade_model.py  user_model.py
tbr_api/routers/: atividade_router.py  user_router.py
tbr_api/schemas/: atividade_schema.py  user_schema.py
tests/: test_tbr_api.py
