[tool.poetry]
name = "tbr-api"
version = "0.1.0"
description = ""
authors = ["Luiz Filipe de Oliveira Gonçalves <filipeoliveira@arpiatecnologia.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
alembic = "^1.8.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
